# wifi-dmx

./: Dockerfile  build_container.sh  pyproject.toml  run_container.sh  run_container_2.sh
tests/: test_light.py  test_wifidmx.py
wifidmx/: colors.py  communicator.py  controller.py  dmx_artnet.py  group.py  light.py  plot_lights.py
