[tool.poetry]
name = "wifidmx"
version = "0.1.0"
description = ""
authors = ["Max Ries <max.ries113@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"truecolor.py" = "^0.0.2"
stupidArtnet = "^1.3.0"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
